lod2repository (1.18) lod2; urgency=low

  * add new maintainer keys for Szymon Danielczyk (DERI)

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 25 Apr 2012 05:21:13 -0700

lod2repository (1.17) lod2; urgency=low

  * Add new key for maintainer: Claus Stadler (AKSW)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Thu, 02 Feb 2012 14:41:02 +0100

lod2repository (1.16) lod2; urgency=low

  * re-add Norman Heinos key to the database file

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Wed, 25 Jan 2012 15:09:57 +0100

lod2repository (1.14) lod2; urgency=low

  * Add new key for maintainer: Norman Heino (AKSW)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Wed, 18 Jan 2012 12:50:35 +0100

lod2repository (1.13) lod2; urgency=low

  * Add extra key for maintainer: Bert Van Nuffelen (TenForce) 

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 25 Oct 2011 02:36:32 -0700

lod2repository (1.12) lod2; urgency=low

  * Remove maintainer key: Stephen Mulcahy (DERI)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Fri, 09 Sep 2011 12:33:16 +0200

lod2repository (1.11) lod2; urgency=low

  * New maintainer key: Szymon Danielczyk (DERI)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Fri, 09 Sep 2011 10:44:46 +0200

lod2repository (1.10) lod2; urgency=low

  * Replaced maintainer key: Tim Haynes (Openlink)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Wed, 31 Aug 2011 16:19:58 +0200

lod2repository (1.9) lod2; urgency=low

  * New maintainer key: Tim Haynes (Openlink) 

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Fri, 12 Aug 2011 15:49:16 +0200

lod2repository (1.8) lod2; urgency=low

  * New maintainer key: Stephen Mulcahy (DERI)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Mon, 20 Jun 2011 13:02:04 +0200

lod2repository (1.7) lod2; urgency=low

  * New maintainer key: Robert Isele (FU Berlin)
