@@ -1,3 +1,9 @@
+lod2repository (1.19) lod2; urgency=low
+
+  * create new packages for testing/stable
+
+ -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Fri, 22 Jun 2012 22:00:23 +0200
+
 lod2repository (1.18) lod2; urgency=low
 
   * add new maintainer keys for Szymon Danielczyk (DERI)
